--- a/History/History.csproj
+++ b/History/History.csproj
@@ -36,20 +36,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Data.Sqlite">
-      <HintPath>..\..\..\..\Desktop\TShock 4.3.7\ServerPlugins\Mono.Data.Sqlite.dll</HintPath>
+      <HintPath>..\References\Mono.Data.Sqlite.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\..\..\Desktop\TShock 4.3.7\ServerPlugins\MySql.Data.dll</HintPath>
+      <HintPath>..\References\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="TerrariaServer, Version=1.3.0.6, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Desktop\TShock 4.3.11\TerrariaServer.exe</HintPath>
+      <HintPath>..\References\TerrariaServer.exe</HintPath>
     </Reference>
     <Reference Include="TShockAPI, Version=4.3.9.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Desktop\TShock 4.3.11\ServerPlugins\TShockAPI.dll</HintPath>
+      <HintPath>..\References\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
