--- a/History/History.csproj
+++ b/History/History.csproj
@@ -41,6 +41,9 @@
     <Reference Include="MySql.Data">
       <HintPath>..\References\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="OTAPI">
+      <HintPath>..\References\OTAPI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="TerrariaServer, Version=1.3.0.6, Culture=neutral, processorArchitecture=x86">
